@@ -11,10 +11,11 @@ class ExpandPaths(Filter):
     """Fill out relative paths for src tags (e.g. img src or sound src)."""
 
     def run(self, text, card, fact_key, **render_args):
+        self.main_widget().show_information("expand" + text.replace("<", "&lt;") + "\n" + self.database().media_dir() )
         i = text.lower().find("src")
         while i != -1:
             start = text.find("\"", i)
-            end = text.find("\"", start+1)
+            end = text.find("\"", start + 1)
             if start == -1 or end == -1:
                 break
             old_path = text[start+1:end]
@@ -22,5 +23,5 @@ class ExpandPaths(Filter):
                 self.database().media_dir()) + text[end:]
             # Since text is always longer now, we can start searching
             # from the previous end tag.
-            i = text.lower().find("src", end+1)
+            i = text.lower().find("src", end + 1)
         return text
